--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	    <title>Lynx</title>
-	    <link rel="icon" href="page-icon.png">
+	    <link rel="icon" href="favicon.ico">
 		
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue_grey-green.min.css" />
